# sapf

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  README.txt  TODO.md
.github/workflows/: build.yml
include/: Form.hpp  Forward.hpp  List.hpp  MathFuns.hpp  MidiRouter.hpp  Object.hpp  ObjectBase.hpp  ObjectInlines.hpp  PlatformLock.hpp  SoundFiles.hpp  String.hpp  VM.hpp  Value.hpp  clz.hpp  dsp.hpp  rc_ptr.hpp
include/sapf/: AccelerateCompat.hpp  AudioBackend.hpp  Engine.hpp  MaxAudioBackend.hpp  MidiBackend.hpp  ReplRunner.hpp
include/sapf/backends/: AlsaAudioBackend.hpp  CoreAudioBackend.hpp  CoreMidiBackend.hpp  NullAudioBackend.hpp  NullMidiBackend.hpp  RtAudioBackend.hpp  RtMidiBackend.hpp
include/sapf/platform/: Platform.hpp  WindowsCompat.hpp
libmanta/: CMakeLists.txt
src/: OscilUGens.cpp  VM.cpp  main.cpp
src/cli/: CMakeLists.txt  ReplRunner.cpp  main.cpp
src/engine/: AudioBackend.cpp  CMakeLists.txt  CoreOps.cpp  DelayUGens.cpp  FilterUGens.cpp  MathOps.cpp  Midi.cpp  MidiBackend.cpp  MidiRouter.cpp  OscilUGens.cpp  Parser.cpp  RandomOps.cpp  SapfEngine.cpp  SoundFiles.cpp  Spectrogram.cpp  StreamOps.cpp  UGen.cpp  VM.cpp  dsp.cpp  elapsedTime.cpp  makeImageStub.cpp
src/engine/backends/: AlsaAudioBackend.cpp  CoreAudioBackend.cpp  CoreMidiBackend.cpp  MaxAudioBackend.cpp  NullAudioBackend.cpp  NullMidiBackend.cpp  RtAudioBackend.cpp  RtMidiBackend.cpp
src/engine/platform/: PlatformMac.cpp  PlatformUnix.cpp  PlatformWindows.cpp
tests/: CMakeLists.txt  run_file_test.cmake  run_test.cmake  test_arrays.txt  test_at.txt  test_conditionals.txt  test_deep_mapping.txt  test_equals.txt  test_filter.txt  test_forms.txt  test_inheritance.txt  test_math.txt  test_ordering.txt  test_size_reverse.txt  test_smoke.txt  test_stack.txt  test_startup_debug.cpp  test_streams.txt  test_tuples.txt
tests/unit/: CMakeLists.txt  test_array_list.cpp  test_common.hpp  test_errors.cpp  test_hash.cpp  test_parser.cpp  test_refcount.cpp  test_symbol.cpp  test_value.cpp  test_vm.cpp
